# star-burger

./: .gitignore  README.md  deploy_star_burger.sh  pyproject.toml  requirements.txt
foodcartapp/: admin.py  models.py  serializers.py  utils.py  views.py
foodcartapp/views/: AuthViews.py
geolocation/: models.py
geolocation/migrations/: 0001_initial.py
restaurateur/: views.py
restaurateur/templates/: order_items.html
star_burger/: settings.py
